--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@astar-network/astar-api",
+  "name": "@pendulum-chain/pendulum-api",
   "version": "0.1.12",
-  "description": "Astar JS API",
+  "description": "Pendulum JS API",
   "main": "index.js",
-  "author": "Astar Network <info@astar.network>",
+  "author": "Pendulum Network <info@pendulum.network>",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public",
@@ -12,17 +12,17 @@
   "repository": {
     "directory": "packages/api",
     "type": "git",
-    "url": "https://github.com/AstarNetwork/astar.js"
+    "url": "https://github.com/pendulum-chain/pendulum.js"
   },
   "bugs": {
-    "url": "https://github.com/AstarNetwork/astar.js/issues"
+    "url": "https://github.com/pendulum-chain/pendulum.js/issues"
   },
-  "homepage": "https://github.com/AstarNetwork/astar.js",
+  "homepage": "https://github.com/pendulum-chain/pendulum.js",
   "dependencies": {
-    "@astar-network/astar-api-derive": "0.1.12",
-    "@astar-network/astar-types": "0.1.12",
     "@babel/runtime": "^7.10.2",
     "@open-web3/orml-api-derive": "^1.0.2-0",
+    "@pendulum-chain/pendulum-api-derive": "0.1.12",
+    "@pendulum-chain/pendulum-types": "0.1.12",
     "@polkadot/api": "^9.2.4"
   },
   "peerDependencies": {
