--- a/packages/sdk-core/package.json
+++ b/packages/sdk-core/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@astar-network/astar-sdk-core",
+  "name": "@pendulum-chain/pendulum-sdk-core",
   "version": "0.1.12",
-  "description": "the core for astar SDK",
+  "description": "the core for pendulum SDK",
   "main": "index.js",
-  "author": "Astar Network <info@astar.network>",
+  "author": "Pendulum Network <info@pendulum.network>",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public",
@@ -12,12 +12,12 @@
   "repository": {
     "directory": "packages/sdk-core",
     "type": "git",
-    "url": "https://github.com/AstarNetwork/astar.js"
+    "url": "https://github.com/pendulum-chain/pendulum.js"
   },
   "bugs": {
-    "url": "https://github.com/AstarNetwork/astar.js/issues"
+    "url": "https://github.com/pendulum-chain/pendulum.js/issues"
   },
-  "homepage": "https://github.com/AstarNetwork/astar.js",
+  "homepage": "https://github.com/pendulum-chain/pendulum.js",
   "dependencies": {
     "@ethersproject/bignumber": "^5.6.2",
     "@polkadot/keyring": "^10.1.7",
