--- a/packages/type-definitions/package.json
+++ b/packages/type-definitions/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@astar-network/astar-type-definitions",
+  "name": "@pendulum-chain/pendulum-type-definitions",
   "version": "0.1.12",
-  "description": "Polkadot.js type definations for astar Network",
+  "description": "Polkadot.js type definations for pendulum Network",
   "main": "index.js",
-  "author": "Astar Network <info@astar.network>",
+  "author": "Pendulum Network <info@pendulum.network>",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public",
@@ -12,12 +12,12 @@
   "repository": {
     "directory": "packages/type-definitions",
     "type": "git",
-    "url": "https://github.com/AstarNetwork/astar.js"
+    "url": "https://github.com/pendulum-chain/pendulum.js"
   },
   "bugs": {
-    "url": "https://github.com/AstarNetwork/astar.js/issues"
+    "url": "https://github.com/pendulum-chain/pendulum.js/issues"
   },
-  "homepage": "https://github.com/AstarNetwork/astar.js",
+  "homepage": "https://github.com/pendulum-chain/pendulum.js",
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "@open-web3/orml-type-definitions": "^1.0.2-0"
