--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@astar-network/astar-types",
+  "name": "@pendulum-chain/pendulum-types",
   "version": "0.1.12",
-  "description": "Polkadot.js type definations for Astar Network",
+  "description": "Polkadot.js type definations for Pendulum Network",
   "main": "index.js",
-  "author": "Astar Network <info@astar.network>",
+  "author": "Pendulum Network <info@pendulum.network>",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public",
@@ -12,17 +12,17 @@
   "repository": {
     "directory": "packages/api-types",
     "type": "git",
-    "url": "https://github.com/AstarNetwork/astar.js"
+    "url": "https://github.com/pendulum-chain/pendulum.js"
   },
   "bugs": {
-    "url": "https://github.com/AstarNetwork/astar.js/issues"
+    "url": "https://github.com/pendulum-chain/pendulum.js/issues"
   },
-  "homepage": "https://github.com/AstarNetwork/astar.js",
+  "homepage": "https://github.com/pendulum-chain/pendulum.js",
   "dependencies": {
-    "@astar-network/astar-type-definitions": "0.1.12",
     "@babel/runtime": "^7.10.2",
     "@open-web3/api-mobx": "^1.0.2-0",
     "@open-web3/orml-types": "^1.0.2-0",
+    "@pendulum-chain/pendulum-type-definitions": "0.1.12",
     "@polkadot/api": "^9.2.4",
     "@polkadot/typegen": "^9.2.4",
     "@polkadot/types": "^9.2.4"
