--- a/packages/type-definitions/package.json
+++ b/packages/type-definitions/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@pendulum-chain/pendulum-type-definitions",
   "version": "0.1.12",
-  "description": "Polkadot.js type definations for pendulum Network",
+  "description": "Polkadot.js type definitions for pendulum Network",
   "main": "index.js",
-  "author": "Pendulum Network <info@pendulum.network>",
+  "author": "Pendulum",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public",
