--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@pendulum-chain/pendulum-types",
   "version": "0.1.12",
-  "description": "Polkadot.js type definations for Pendulum Network",
+  "description": "Polkadot.js type definitions for Pendulum Network",
   "main": "index.js",
-  "author": "Pendulum Network <info@pendulum.network>",
+  "author": "Pendulum",
   "license": "Apache-2.0",
   "publishConfig": {
     "access": "public",
