--- a/packages/types/tsconfig.build.json
+++ b/packages/types/tsconfig.build.json
@@ -4,7 +4,8 @@
       "baseUrl": "..",
       "outDir": "./build",
       "rootDir": "./src",
-      "resolveJsonModule": true
+      "resolveJsonModule": true,
+      "noUnusedLocals": false
     },
     "exclude": [
       "**/checkTypes.manual.ts",
