--- a/packages/api-derive/tsconfig.build.json
+++ b/packages/api-derive/tsconfig.build.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
       "baseUrl": "..",
       "outDir": "./build",
-      "rootDir": "./src"
+      "rootDir": "./src",
     },
     "exclude": [
       "**/checkTypes.manual.ts",
