--- a/packages/api-derive/package.json
+++ b/packages/api-derive/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pendulum-chain/pendulum-api-derive",
+  "name": "@pendulum-chain/api-derive",
   "version": "0.1.12",
   "description": "Pendulum JS API",
   "main": "index.js",
@@ -21,7 +21,7 @@
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "@open-web3/orml-types": "^1.0.2-0",
-    "@pendulum-chain/pendulum-types": "0.1.12",
+    "@pendulum-chain/types": "0.1.12",
     "@polkadot/api-derive": "^9.2.4"
   }
 }
