--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pendulum-chain/pendulum-api",
+  "name": "@pendulum-chain/api",
   "version": "0.1.12",
   "description": "Pendulum JS API",
   "main": "index.js",
@@ -21,8 +21,8 @@
   "dependencies": {
     "@babel/runtime": "^7.10.2",
     "@open-web3/orml-api-derive": "^1.0.2-0",
-    "@pendulum-chain/pendulum-api-derive": "0.1.12",
-    "@pendulum-chain/pendulum-types": "0.1.12",
+    "@pendulum-chain/api-derive": "0.1.12",
+    "@pendulum-chain/types": "0.1.12",
     "@polkadot/api": "^9.2.4"
   },
   "peerDependencies": {
