--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/pendulum-chain/pendulum.js.git"
   },
   "sideEffects": false,
-  "version": "0.1.12",
+  "version": "0.1.0",
   "workspaces": [
     "packages/*",
     "examples/*"
@@ -28,7 +28,11 @@
     "run-example": "ts-node -r tsconfig-paths/register examples/index.ts",
     "test": "polkadot-dev-run-test --coverage --passWithNoTests",
     "update-metadata": "ts-node --project ./tsconfig.json packages/types/scripts/updateMetadata.ts",
-    "update-metadata-local": "ENDPOINT=ws://127.0.0.1:9944 ts-node --project ./tsconfig.json packages/types/scripts/updateMetadata.ts"
+    "update-metadata-local": "ENDPOINT=ws://127.0.0.1:9944 ts-node --project ./tsconfig.json packages/types/scripts/updateMetadata.ts",
+    "generate:defs": "ts-node -r tsconfig-paths/register node_modules/.bin/polkadot-types-from-defs --package @pendulum-chain/types/interfaces --input packages/types/src/interfaces --endpoint packages/types/src/metadata/static-latest.json",
+    "generate:meta": "ts-node -r tsconfig-paths/register node_modules/.bin/polkadot-types-from-chain --package @pendulum-chain/types/interfaces --output packages/types/src/interfaces --endpoint packages/types/src/metadata/static-latest.json",
+    "update-types": "yarn update-metadata && yarn generate:defs && yarn generate:meta",
+    "publish-types": "cd ./packages/types && node ./scripts/publishTypes.js"
   },
   "dependencies": {
     "ts-proto": "^1.82.2"
