--- a/packages/type-definitions/package.json
+++ b/packages/type-definitions/package.json
@@ -20,6 +20,6 @@
   "homepage": "https://github.com/pendulum-chain/pendulum.js",
   "dependencies": {
     "@babel/runtime": "^7.10.2",
-    "@open-web3/orml-type-definitions": "^1.0.2-0"
+    "@open-web3/orml-type-definitions": "^1.1.4"
   }
 }
