--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "update-metadata-local": "ENDPOINT=ws://127.0.0.1:9944 ts-node --project ./tsconfig.json packages/types/scripts/updateMetadata.ts",
     "generate:defs": "ts-node -r tsconfig-paths/register node_modules/.bin/polkadot-types-from-defs --package @pendulum-chain/types/interfaces --input packages/types/src/interfaces --endpoint packages/types/src/metadata/static-latest.json",
     "generate:meta": "ts-node -r tsconfig-paths/register node_modules/.bin/polkadot-types-from-chain --package @pendulum-chain/types/interfaces --output packages/types/src/interfaces --endpoint packages/types/src/metadata/static-latest.json",
-    "update-types": "yarn update-metadata && yarn generate:defs && yarn generate:meta",
+    "update-types": "yarn update-metadata-local && yarn generate:defs && yarn generate:meta",
     "publish-types": "cd ./packages/types && node ./scripts/publishTypes.js"
   },
   "dependencies": {
@@ -42,16 +42,16 @@
     "@babel/register": "^7.13.6",
     "@babel/runtime": "^7.14.0",
     "@open-web3/dev-config": "^0.1.13",
-    "@open-web3/util": "^1.0.2-0",
-    "@polkadot/api": "^9.2.4",
-    "@polkadot/api-augment": "^9.2.4",
-    "@polkadot/api-derive": "^9.2.4",
+    "@open-web3/util": "^1.1.4",
+    "@polkadot/api": "^9.9.1",
+    "@polkadot/api-augment": "^9.9.1",
+    "@polkadot/api-derive": "^9.9.1",
     "@polkadot/dev": "^0.65.86",
     "@polkadot/networks": "^8.4.1",
-    "@polkadot/rpc-core": "^9.2.4",
-    "@polkadot/typegen": "^9.2.4",
-    "@polkadot/types": "^9.2.4",
-    "@polkadot/types-codec": "^9.2.4",
+    "@polkadot/rpc-core": "^9.9.1",
+    "@polkadot/typegen": "^9.9.1",
+    "@polkadot/types": "^9.9.1",
+    "@polkadot/types-codec": "^9.9.1",
     "@types/jest": "27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "jest": "^27.5.1",
