--- a/package.json
+++ b/package.json
@@ -43,15 +43,6 @@
     "@babel/runtime": "^7.14.0",
     "@open-web3/dev-config": "^0.1.13",
     "@open-web3/util": "^1.1.4",
-    "@polkadot/api": "^9.9.1",
-    "@polkadot/api-augment": "^9.9.1",
-    "@polkadot/api-derive": "^9.9.1",
-    "@polkadot/dev": "^0.65.86",
-    "@polkadot/networks": "^8.4.1",
-    "@polkadot/rpc-core": "^9.9.1",
-    "@polkadot/typegen": "^9.9.1",
-    "@polkadot/types": "^9.9.1",
-    "@polkadot/types-codec": "^9.9.1",
     "@types/jest": "27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "jest": "^27.5.1",
@@ -61,6 +52,10 @@
   },
   "resolutions": {
     "bn.js": "4.12",
-    "typescript": "^4.6.2"
+    "typescript": "^4.6.2",
+    "@polkadot/api": "^9.9.1",
+    "@polkadot/typegen": "^9.9.1",
+    "@polkadot/types-codec": "^9.9.1",
+    "@polkadot/api-derive": "^9.9.1"
   }
 }
