--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "url": "https://github.com/pendulum-chain/pendulum.js.git"
   },
   "sideEffects": false,
-  "version": "0.1.4",
+  "version": "0.1.5",
   "workspaces": [
     "packages/*",
     "examples/*"
@@ -30,7 +30,7 @@
     "update-version-major": "node scripts/update-version.js major",
     "update-version-minor": "node scripts/update-version.js minor",
     "update-version-patch": "node scripts/update-version.js patch",
-    "publish": "NPM_TOKEN=REPLACE_ME node ./scripts/build-release.js"
+    "publish": "node ./scripts/build-release.js"
   },
   "dependencies": {
     "ts-proto": "^1.82.2"
