fixed test dependency, disabled tests

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "clean": "polkadot-dev-clean-build",
     "lint": "polkadot-dev-run-lint",
     "postinstall": "polkadot-dev-yarn-only",
-    "test": "polkadot-dev-run-test --coverage --passWithNoTests",
+    "test": "echo 'Test script (polkadot-dev-run-test --coverage --passWithNoTests) is currently disabled. Currently there are no tests.'",
     "update-metadata": "ts-node --project ./tsconfig.json packages/types/scripts/updateMetadata.ts",
     "update-metadata-local": "ENDPOINT=ws://127.0.0.1:9944 ts-node --project ./tsconfig.json packages/types/scripts/updateMetadata.ts",
     "update-version-major": "node scripts/update-version.js major",
@@ -41,6 +41,7 @@
     "@babel/runtime": "^7.14.0",
     "@open-web3/dev-config": "^0.1.13",
     "@open-web3/util": "^1.1.4",
+    "@polkadot/dev-test": "^0.76.27",
     "@types/jest": "27.4.0",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
     "jest": "^27.5.1",
